// Copyright 2016, Xuanting Cai
// Email: caixuanting@gmail.com

syntax = "proto2";

package interface;

enum ValueType {
	INT32 = 1;
	INT64 = 2;
	DOUBLE = 3;
	STRING = 4;
}

message Signal {
	optional string timestamp = 1;
	
	optional ValueType value_type = 2;
	
	optional int32 int32_value = 3;
	optional int64 int64_value = 4;
	optional double double_value = 5;
	optional string string_value = 6;
	
	repeated Signal base_signal = 7;
	
	optional bool is_valid = 8 [default = false];
}
